--- a/assets/css/index.less
+++ b/assets/css/index.less
@@ -205,7 +205,7 @@ body {
   right: 0;
   display: flex;
 
-  display: none;
+  //display: none;
 
   justify-content: center;
   align-items: center;
