--- a/assets/css/index.less
+++ b/assets/css/index.less
@@ -37,9 +37,12 @@ body {
 
 .intro-main {
   display: flex;
-  width: 30vw;
-  height: 100vh;
-  width: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left:0;
+  // width: 100%;
 
   @media screen and (max-width: 950px) {
     background-image: url(/intropic_mobile.jpg);
@@ -106,8 +109,9 @@ body {
 
 #postlink {
   position: fixed;
-  right: 0;
-  bottom: 0;
+  right: 5px;
+  border-radius: 3px;
+  bottom: 3px;
   z-index: 2;
   display: block;
   background-color: #1919196b;
@@ -213,6 +217,8 @@ body {
   
   img {
     animation: bounce 1s linear infinite;
+    width: 150px;
+    height: 150px;
     // animation: rotate .1s linear infinite;
     // transform-origin: -100% 100%;
   };
